# community-railway-info

./: .gitignore  Dockerfile  README.md  TODO.md  compose.yml  config.example.yml  lines.json  migrate.py  operators.json  pyproject.toml  requirements.txt  script.js
.github/ISSUE_TEMPLATE/: bug.yml
core/: app.py  config.py  data.py  logger.py  sql.py  utils.py
core/controller/: __init__.py  line.py  operator.py  operator_requests.py  station.py
core/routes/: admin.py  api.py  dashboard.py  index.py  main.py  oauth2.py  operators.py
layouts/: admin.html  api-docs.html  computercraft-setup.html  dashboard.html  index.html  operator_lines.html  stations.html  users.html
layouts/admin/: admin.html  companies.html  database.html  logs.html  settings.html
layouts/base/: base.html  nav.html
layouts/operators/: operators.html  overview.html  request.html
static/assets/icons/aseprite/: 1-1d.aseprite  1-2.aseprite  1-2d.aseprite  1-2w.aseprite  1.aseprite  1w.aseprite  2-1d.aseprite  2-2d.aseprite  2.aseprite  2w.aseprite  bh.aseprite  bh1.aseprite  bh2.aseprite  bl.aseprite  bl1.aseprite  bl2.aseprite  e.aseprite  fh.aseprite  fh1.aseprite  fh2.aseprite  fl.aseprite  fl1.aseprite  fl2.aseprite  j.aseprite  l.aseprite  w.aseprite
static/assets/lua/: setup.lua
static/css/: admin.css  api-docs.css  base.css  computercraft-setup.css  dashboard.css  dialog.css  index.css  operators.css  request.css  stations.css  users.css
static/js/: color.js  companies.js  dashboard.js  lines.js  nav.js  request.js  station.js
(+1 files in other folders)
