[project]
name = "community-railway-info"
version = "1.1.0"
description = "A project for MrJulsen's Community Minecraft Server enabling users to view the status of any railway line quickly and conveniently."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.3.0",
    "flask[async]>=3.1.3",
    "pyyaml>=6.0.3",
    "requests-oauthlib>=2.0.0",
    "mysql-connector-python>=9.6.0",
]
